--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   fluentui_system_icons: ^1.1.259
   get: ^4.6.6
+  dio: ^5.7.0
   http: ^1.2.2
   confetti: ^0.8.0
   firebase_core: ^3.6.0
@@ -49,6 +50,7 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.14.1
   flutter_lints: ^3.0.0
+  flutter_dotenv: ^5.2.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -69,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
